<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.ui.detailsFilm.viewModel.DetailsFilmViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundApp">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_details">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/margin_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/margin_large" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/margin_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/margin_large" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_id"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="@dimen/margin_large"
                    app:layout_constraintEnd_toEndOf="@id/margin_end"
                    app:layout_constraintStart_toStartOf="@+id/margin_start"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_extreme"
                    app:layout_constraintEnd_toEndOf="@id/margin_end"
                    app:layout_constraintStart_toStartOf="@+id/margin_start"
                    app:layout_constraintTop_toBottomOf="@id/img_id" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/year"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintEnd_toStartOf="@id/year"
                    app:layout_constraintStart_toStartOf="@+id/margin_start"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintBottom_toBottomOf="@+id/title_year"
                    app:layout_constraintEnd_toEndOf="@id/margin_end"
                    app:layout_constraintStart_toEndOf="@+id/title_year"
                    app:layout_constraintTop_toTopOf="@id/title_year" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_released"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/released"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintEnd_toStartOf="@id/released"
                    app:layout_constraintStart_toStartOf="@+id/margin_start"
                    app:layout_constraintTop_toBottomOf="@id/title_year" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/released"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintBottom_toBottomOf="@+id/title_released"
                    app:layout_constraintEnd_toEndOf="@id/margin_end"
                    app:layout_constraintStart_toEndOf="@+id/title_released"
                    app:layout_constraintTop_toTopOf="@id/title_released" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/genre"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintEnd_toStartOf="@id/genre"
                    app:layout_constraintStart_toStartOf="@+id/margin_start"
                    app:layout_constraintTop_toBottomOf="@id/title_released" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintBottom_toBottomOf="@+id/title_genre"
                    app:layout_constraintEnd_toEndOf="@id/margin_end"
                    app:layout_constraintStart_toEndOf="@+id/title_genre"
                    app:layout_constraintTop_toTopOf="@id/title_genre" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/rating"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintEnd_toStartOf="@id/rating"
                    app:layout_constraintStart_toStartOf="@+id/margin_start"
                    app:layout_constraintTop_toBottomOf="@id/title_genre" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintBottom_toBottomOf="@+id/title_rating"
                    app:layout_constraintEnd_toEndOf="@id/margin_end"
                    app:layout_constraintStart_toEndOf="@+id/title_rating"
                    app:layout_constraintTop_toTopOf="@id/title_rating" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_plot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/plot"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintStart_toStartOf="@+id/margin_start"
                    app:layout_constraintTop_toBottomOf="@id/title_rating" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/plot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_large"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintBottom_toTopOf="@id/button_back"
                    app:layout_constraintEnd_toEndOf="@id/margin_end"
                    app:layout_constraintStart_toEndOf="@+id/margin_start"
                    app:layout_constraintTop_toBottomOf="@+id/title_plot"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_back"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/background_button"
                    android:text="@string/voltar"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/margin_end"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/margin_start" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_margin="@dimen/margin_large"
            android:backgroundTint="@color/color_primary"
            app:icon="@drawable/ic_favorite_star"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>